<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Menu">

    <Button
        android:id="@+id/buttonPlay1"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/boton_menu_sin_texto"
        android:fontFamily="@font/baloo"
        android:onClick="firstQuest"
        android:paddingTop="0sp"
        android:paddingEnd="55sp"
        android:paddingBottom="0sp"
        android:text="@string/historia"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonPlay4"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_menu_sin_texto"
        android:fontFamily="@font/baloo"
        android:onClick="fourthQuest"
        android:paddingStart="0sp"
        android:paddingRight="30sp"
        android:text="@string/pendiente"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay3" />

    <Button
        android:id="@+id/buttonPlay3"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_menu_sin_texto"
        android:fontFamily="@font/baloo"
        android:onClick="thirdQuest"
        android:paddingStart="0sp"
        android:paddingEnd="10sp"
        android:text="@string/geograf_a"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay2" />

    <Button
        android:id="@+id/buttonPlay2"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_menu_sin_texto"
        android:fontFamily="@font/baloo"
        android:onClick="secondQuest"
        android:paddingStart="0sp"
        android:paddingEnd="30sp"
        android:text="@string/banderas"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay1" />

    <ImageView
        android:id="@+id/star00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay1"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay1"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay1"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay1"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay1"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay1"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay2"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay2"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay2"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay2"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay2"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay2"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay4"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay4"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay4"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay4"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay4"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay4"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay3"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay3"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay3"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay3"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/star22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay3"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay3"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="386dp"
        android:layout_height="205dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/changeUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="THIS IS A TEST"
        android:onClick="goChangeUser"
        android:text="change user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#1C1C1C"
        android:text="Sin usuario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/userImageMenu"
        app:layout_constraintStart_toEndOf="@+id/userImageMenu" />

    <ImageView
        android:id="@+id/userImageMenu"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/profile_pic_none" />

</androidx.constraintlayout.widget.ConstraintLayout>